# MENS-DT-RL

./: .gitignore  README.md  decision_tree.py  decision_tree_model.py  evaluation.py  expert_model.py  imitation.py  initialization.py  main.py  normalizer.py  paper.md  pruning.py  pyproject.toml  test_member_c.py  training.py  tree_node.py  work_distribution.md
results/: Blackjack-v1_R_20260515_003441_history.csv  Blackjack-v1_R_20260515_003441_tree.pkl  CartPole-v1_R_20260502_191613_history.csv  CartPole-v1_R_20260502_191613_tree.pkl  CartPole-v1_R_20260502_202515_history.csv  CartPole-v1_R_20260502_202515_tree.pkl  CartPole-v1_R_20260515_002239_history.csv  CartPole-v1_R_20260515_002239_tree.pkl  FrozenLake-v1_R_20260515_004417_history.csv  FrozenLake-v1_R_20260515_005349_history.csv  FrozenLake-v1_R_20260515_005349_tree.pkl  Pendulum-v1_R_20260515_011711_history.csv  Pendulum-v1_R_20260515_011711_tree.pkl
